fixed folder spacing

--- a/mediafly-app/src/Style/App.css
+++ b/mediafly-app/src/Style/App.css
@@ -118,11 +118,13 @@
 .file-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin: 50px 100px 50px 100px;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 0px 50px;
 }
 
 .file-img {
+  display: flex;
   width: 100%;
   max-width: 600px;
   height: auto;
@@ -132,11 +134,10 @@
 .file-data-container {
   display: flex;
   flex-direction: column;
-  height: 50%;
   margin-top: 2.5%; 
   background-color: rgba(186, 184, 184, 0.564);
   border-radius: 10px;
-  padding: 40px;
+  padding: 35px;
 }
 
 .file-data-container > p {
